<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rc_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/main_activity_text_view_text"
        app:layout_constraintBottom_toTopOf="@+id/ed_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/main_activity_edit_text_hint"
        app:layout_constraintBottom_toTopOf="@+id/button_send"
        app:layout_constraintEnd_toEndOf="@+id/rc_view"
        app:layout_constraintStart_toStartOf="@+id/rc_view"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_send_button"
        app:layout_constraintBottom_toTopOf="@+id/sign_out"
        app:layout_constraintEnd_toEndOf="@+id/ed_message"
        app:layout_constraintStart_toStartOf="@+id/ed_message" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_sign_out_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_send"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>